added background image to card1

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,9 @@ main {
 }
 
 #card1 {
+  background-image: url("../images/bg-pattern-quotation.svg");
+  background-repeat: no-repeat;
+  background-position: 85% 0;
   background-color: var(--purple500);
 }
 
